--- a/bai2.html
+++ b/bai2.html
@@ -24,7 +24,9 @@
       }
       return arrayResult;
   }
-  num = insertNumberToArray(arr,16,6)
+  let x = +prompt('So x: ');
+  let index = +prompt('Vi tri: ');
+  num = insertNumberToArray(arr,x,index);
 
   document.write('Mang moi la: ' + num)
 
